专业页面已经写完
用户新增的控件。
内部组件不能直接调用外部组件，不然会有问题，必须通过props进行通信。

明天把扩展信息写了，然后用户页面应该就能正常完成了
